--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "express": "^4.17.1",
     "nuxt": "^2.13.0",
     "nuxt-fontawesome": "^0.4.0"
   },
