--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nuxt-fontawesome": "^0.4.0"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.16.3"
   },
   "devDependencies": {}
 }
