--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nuxt-fontawesome": "^0.4.0"
   },
   "engines": {
-    "node": "12.16.3x"
+    "node": "12.16.3x",
+    "npm": "6.14.4"
   },
   "devDependencies": {}
 }
