--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "nuxt": "^2.13.0",
     "nuxt-fontawesome": "^0.4.0",
+    "vue-agile": "^1.1.3",
     "vue-scrollto": "^2.18.1"
   },
   "engines": {
