--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "express": "^4.17.1",
+    "hooper": "^0.3.4",
     "nuxt": "^2.13.0",
     "nuxt-fontawesome": "^0.4.0",
-    "vue-agile": "^1.1.3",
     "vue-scrollto": "^2.18.1"
   },
   "engines": {
